# Pulse

./: .gitignore  README.md
docs/: Pulse_User_Acceptance_Test_Scenarios.md  github-guide.html  uat.doc
src/: Pulse.sln
src/JwtKeyGenerator/: JwtKeyGenerator.csproj  Program.cs
src/Pulse.Api/: Global.asax  Global.asax.cs  Pulse.Api.csproj  Template.Web.Debug.config  Template.Web.Release.config  Template.Web.config  packages.config
src/Pulse.Auth.Identity/: Pulse.Auth.Identity.csproj
src/Pulse.Core/: Pulse.Core.csproj
src/Pulse.DataTransformationObjects/: Pulse.DataTransformationObjects.csproj  UpdateMemberTasksRequest.cs  dtoActivity.cs  dtoActivityMeta.cs  dtoAnnotationType.cs  dtoCategory.cs  dtoCategoryWithStats.cs  dtoField.cs  dtoFieldOption.cs  dtoFieldRule.cs  dtoFieldWithStats.cs  dtoForm.cs  dtoFormEntityLink.cs  dtoFormExtended.cs  dtoFormField.cs  dtoFormFieldOption.cs  dtoFormFieldRule.cs  dtoFormSubmissionValue.cs  dtoMaturityLevel.cs  dtoMaturityLevelWithStats.cs  dtoMember.cs  dtoMilestone.cs  dtoModule.cs  (+40 more)
src/pulse.console/: .env.example  .gitignore  README.md  pyproject.toml
src/pulse.console/scripts/: deploy-pulse-console.bat  deploy-pulse-console.ps1  register-scheduled-tasks.ps1  run-milestone-ready-notifications.ps1  run-notifications-table.ps1  run-pending-tasks-summary.ps1  run-pulse-jobs.bat
src/pulse.console/src/pulse_console/: __main__.py  cli.py  config.py  db.py  emailer.py  logging_utils.py  services.py  state.py
src/pulse.console/src/pulse_console.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+915 files in other folders)
